# papi_demos

./: CMakeLists.txt  PapiMetrics.cpp  PapiMetrics.hpp  README.md  papi_demo1.cpp  papi_demo2.cpp
